feat: update README and specifications with wiring details; enhance main.cpp for debugging and power management

--- a/platformio.ini
+++ b/platformio.ini
@@ -23,6 +23,9 @@ build_flags =
     
     ; Opțional: Dezactivează log-urile Bluetooth inutile pentru a mări viteza
     -D CORE_DEBUG_LEVEL=0
+    
+    ; Disable second core (unicore mode)
+    -D CONFIG_FREERTOS_UNICORE=1
 
 ; Setări pentru upload stabil
 upload_speed = 921600
